--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
     ext {
-        kotlin_version = '1.4.10'
+        kotlin_version = '1.4.20'
         archLifecycleVersion = '1.1.1'
         gradleVersion = '4.1.1'
         supportlibVersion = '1.2.0'
-        navigationVersion = "2.3.0"
+        navigationVersion = "2.3.1"
         dataBindingCompilerVersion = gradleVersion // Always need to be the same.
     }
     repositories {
@@ -14,6 +14,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$gradleVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
